[workspace]
members = [
    "libs/*",
]
resolver = "2"
exclude = ["demo/moda", "demo/modb", "demo/modc"]

[workspace.package]
version = "0.0.1"
rust-version = "1.80"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ybiao"]
repository = "https://github.com/lagudomeze/ioc"

[workspace.dependencies]
boot_core = { path = "../ioc/libs/boot_core" }
visit = { path = "../ioc/utils/visit" }
proc-macro2 = "1"
quote = "1"