[workspace]
members = [
    "libs/*",
]
resolver = "2"
exclude = ["demo/moda", "demo/modb", "demo/modc"]

[workspace.package]
version = "0.0.1"
rust-version = "1.80"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ybiao"]
repository = "https://github.com/lagudomeze/ioc"

[workspace.dependencies]
boot_core = { path = "../ioc/libs/boot_core" }
visit = { path = "../ioc/utils/visit" }

bootstrap = { path = "libs/bootstrap"}
bootstrap_macro = { path = "libs/bootstrap_macro"}
prebuilds = { path = "libs/prebuilds" }
prebuilds_macro = { path = "libs/prebuilds_macro" }

print = { path = "libs/print" }

cargo_metadata = "0.18"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
prettyplease = "0.2"

[workspace.dependencies.syn]
version = "2"
features = [
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
]