[package]
name = "prebuilds"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
syn = { workspace = true }
prettyplease = { workspace = true }
quote = { workspace = true }
visit = { workspace = true }
proc-macro2 = { workspace = true }
prebuilds_macro = { workspace = true }
