[package]
name = "print"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bootstrap = { path = "../bootstrap" }
print_macro = { path = "../print_macro" }

[package.metadata.prebuilds]
name = "print"
