[package]
name = "print"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
prebuilds = { path = "../prebuilds" }
print_macro = { path = "../print_macro" }
proc-macro2 = "1.0.86"

[package.metadata.prebuilds]
name = "PrintXxxx"
