[package]
name = "print_build"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
boot_build = { path = "../../../ioc/libs/boot_build" }

[package.metadata]
bootstrap = "PrintBootstrap"